--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,8 @@ COPY . /backend
 COPY ./requirements.txt /backend/requirements.txt
 
 # Copy the wait-for-it script into the container
-COPY wait-for-it.sh /wait-for-it.sh
-RUN chmod +x /wait-for-it.sh
+COPY wait-for-it.sh /backend/wait-for-it.sh
+RUN chmod +x /backend/wait-for-it.sh
 
 # Install app requirements
 RUN pip install -r requirements.txt
